back to the `space-between`. also adding a workaround to the min-height-space-between bug like here http://stackoverflow.com/questions/42161458/is-there-a-bug-in-chrome-with-justify-content-space-between-and-min-height

--- a/assets/styles/styles.styl
+++ b/assets/styles/styles.styl
@@ -78,13 +78,18 @@ ul
 
 	display: flex
 	flex-direction: column
-	justify-content: center
+	justify-content: justify-content
 	min-height: 100%
 	padding-bottom: 1rem
+
+.intro
+
+	margin: auto 0
 
 .links
 
 	font-size: 1em
+	margin-top: 0
 
 .heart
 
@@ -112,6 +117,10 @@ ul
 
 		float: left
 		width: 50%
+
+.back-to-top
+
+	margin-top: auto
 
 .clearfix
 
